# saas-data-exporter

./: .env.example  .gitignore  CLAUDE.md  README.md  confluence_spaces.csv  github_repos.csv.example  google_users.csv.example  jira_projects.csv.example  pyproject.toml  requirements.md  slack_channels.csv.example
.claude/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
catalog/: athena_tables.sql
docs/: github-app-setup.md  google-service-account-setup.md
exporters/: bigquery.py  catalog.py  confluence.py  github.py  google_workspace.py  jira.py  slack.py
lib/: checkpoint.py  config.py  github_auth.py  input.py  logging.py  rate_limit.py  retry.py  s3.py  session.py  stats.py  types.py
scripts/: benchmark_doc_masking.py  export_status.py  pii_mask_bigquery.py  pii_mask_github.py  pii_mask_jira.py  validate_doc_masking.py
tests/: test_bigquery.py  test_catalog.py  test_checkpoint.py  test_config.py  test_confluence.py  test_documents.py  test_edge_cases.py  test_eml.py  test_export_status.py  test_github.py  test_github_auth.py  test_google_workspace.py  test_input.py  test_jira.py  test_logging.py  test_masker_bigquery_v2.py  test_masker_confluence.py  test_masker_documents.py  test_masker_github.py  test_masker_google.py  test_masker_jira.py  test_masker_slack.py  test_ner.py  test_pii_mask_bigquery.py  test_pii_mask_confluence.py  test_pii_mask_github.py  test_pii_mask_images.py  test_pii_mask_jira.py  test_pii_pipeline.py  test_pii_store.py  test_rate_limit.py  test_retry.py  test_roster.py  test_roster_builder.py  test_s3.py  test_scanner.py  test_session.py  test_slack.py  test_stats.py
(+46 files in other folders)
