[project]
name = "data-exporter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "boto3>=1.34",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "google-auth-httplib2>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "moto[s3]>=5.0",
    "responses>=0.25",
]
fast = [
    "boto3[crt]",
]

[tool.hatch.build.targets.wheel]
packages = ["lib", "exporters"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
